Fix playlist buttons alignment

--- a/styles/compoments/_playlist.css
+++ b/styles/compoments/_playlist.css
@@ -74,8 +74,8 @@
 
 .playlist_button_img {
     background-size: 1em;
-    width: 1em;
-    height: 1em;
+    /*width: auto;*/
+    /*height: auto;*/
     background-color: transparent;
     border: none;
     cursor: pointer;
